--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title></title>
+    <title>html2rss-web instance</title>
+    <meta name="referrer" content="no-referrer">
     <style>
       *,
       ::after,
@@ -13,16 +14,27 @@
 
       body {
         font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-size: 16px;
       }
 
       #app {
         display: flex;
         margin: 0 auto;
-        max-width: 700px;
+        max-width: 44rem;
       }
 
       .feeds {
         flex: 1 1 100%;
+
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+      }
+
+      .feeds__feed {
+        flex: 1 1 100%;
+        margin-bottom: 2rem;
       }
 
       .feed {
@@ -34,7 +46,7 @@
 
       .feed h2 {
         box-shadow: 0 1px 2px rgba(10,10,10,.1);
-        padding: 1em;
+        padding: 1rem 1rem .5rem;
         margin: 0;
       }
 
@@ -46,13 +58,19 @@
 
       .item {
         margin: 0;
-        padding: .5em 1em;
+        padding: .5rem 1rem;
         line-height: 1.61;
         transition: background-color .2s ease-in;
       }
 
       .item:hover {
         background-color: #ddd;
+      }
+
+      @media (min-width: 768px) {
+        .feeds__feed {
+          flex: 0 0 49%;
+        }
       }
     </style>
   </head>
@@ -66,7 +84,7 @@
       Vue.component('item', {
         props: { item: { type: Object, required: true } },
         template: '<li class="item"> \
-          <a :href="item.url" target="_blank" rel="noopener noreferrer nofollow"> \
+          <a :href="item.url" target="_blank" rel="noopener nofollow"> \
             {{item.title}} \
           </a> \
         </li>'
@@ -93,10 +111,10 @@
         mounted: function () {
           var self = this
 
-          this.feedNames.forEach(function(feedName) {
+          this.feedNames.forEach(function (feedName) {
             fetch('./' + feedName + '.json')
-            .then(function(response) { return response.json() })
-            .then(function(feed) { self.feeds.push(feed) })
+            .then(function (response) { return response.json() })
+            .then(function (feed) { self.feeds.push(feed) })
           })
         }
       })
