fix(health_check): errors with internal server error
Closes #341

--- a/views/error.erb
+++ b/views/error.erb
@@ -1,3 +1,9 @@
 <h1><%= response.status %> - <%= @page_title %></h1>
 
-<pre><%= @error.message %></pre>
+<pre>
+<%= @error.class %>: <%= @error.message %>
+
+<% if @show_backtrace %>
+<%= @error.backtrace.join("\n") %>
+<% end %>
+</pre>
