--- a/views/error.erb
+++ b/views/error.erb
@@ -7,3 +7,17 @@
 <%= @error.backtrace.join("\n") %>
 <% end %>
 </pre>
+
+<section>
+  <h2>Need help?</h2>
+  <p>
+    Browse the
+    <a href="https://html2rss.github.io/" rel="noopener noreferrer">
+      html2rss project website
+    </a>
+    or start a
+    <a href="https://github.com/orgs/html2rss/discussions" rel="noopener noreferrer">
+      discussion on Github.
+    </a>
+  </p>
+</section>
