feat: improve example feed config in feed.yml and link to it

--- a/views/index.erb
+++ b/views/index.erb
@@ -5,6 +5,11 @@
 </h1>
 
 <p>
+  Check out the
+  <a href="./example.rss" rel="noreferrer nofollow noindex">example.rss</a>.
+</p>
+
+<p>
   Find out more about the html2rss ecosystem
   <a href="https://html2rss.github.io/">at the project website</a>.
 </p>
