--- a/public/styles.css
+++ b/public/styles.css
@@ -3,6 +3,10 @@
   --highlight: #ff9300;
 }
 
+::selection {
+  background-color: var(--highlight);
+}
+
 label {
   font-weight: bold;
   cursor: pointer;
@@ -57,11 +61,40 @@ body > h2 {
   box-shadow: 0 0 0.25em;
   border-radius: 0.25em;
   border: 1px solid transparent;
-  transition: border-color 0.2s, opacity 0.2s;
+  transition:
+    border-color 0.2s,
+    opacity 0.2s;
 }
 
 .aside-icon > a:hover > img,
 .aside-icon > a:focus > img {
   border-color: currentColor;
   opacity: 0.9;
+}
+
+.auto_source {
+  display: flex;
+  flex-direction: column;
+}
+
+.auto_source input {
+  width: 100%;
+  max-width: unset;
+}
+
+.auto_source > form {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.auto_source iframe:not([src]) {
+  display: none;
+}
+
+.auto_source iframe[src] {
+  display: block;
+  width: 100%;
+  min-height: 50em;
+  max-height: 80vh;
+  border: 0;
 }
