refactor: improve auto_source form handling and styles

--- a/views/auto_source/index.erb
+++ b/views/auto_source/index.erb
@@ -22,4 +22,4 @@
 <iframe loading="lazy"></iframe>
 </section>
 
-<script src="/auto_source.js"></script>
+<script src="/auto_source.js" defer></script>
