--- a/public/styles.css
+++ b/public/styles.css
@@ -17,6 +17,7 @@ html {
   box-sizing: inherit;
 }
 
+/* General Styles */
 label {
   font-weight: bold;
   cursor: pointer;
@@ -31,10 +32,10 @@ body > h2 {
   margin-top: 2em;
 }
 
+/* List Items */
 .items {
   list-style: none;
-  padding-top: 2em;
-  padding-left: 0;
+  padding: 2em 0 0 0;
 }
 
 .items > li {
@@ -52,11 +53,12 @@ body > h2 {
   margin-top: 0;
 }
 
-.item > li > div {
+.items > li > div {
   font-size: 0.9em;
   padding: 0.25em;
 }
 
+/* Aside Icon */
 .aside-icon {
   position: fixed;
   top: 0.5em;
@@ -81,6 +83,7 @@ body > h2 {
   opacity: 0.9;
 }
 
+/* Auto Source Form */
 .auto_source {
   display: flex;
   flex-direction: column;
@@ -88,7 +91,6 @@ body > h2 {
 
 .auto_source input {
   width: 100%;
-  max-width: unset;
 }
 
 .auto_source > form {
@@ -100,15 +102,12 @@ body > h2 {
   margin-right: 0;
 }
 
+/* Iframe Styles */
 .auto_source iframe {
   margin-top: 2em;
-  border-color: var(--background);
-  border-style: groove;
+  border: 1px groove var(--background);
   border-radius: 6px;
-}
-
-.auto_source iframe:not([src]) {
-  display: none;
+  display: none; /* Hide by default */
 }
 
 .auto_source iframe[src] {
