--- a/views/auto_source/index.erb
+++ b/views/auto_source/index.erb
@@ -50,7 +50,8 @@
     <h3>Bookmarklet</h3>
 
     <p>
-      Drag this link to your bookmarks and click it on any page: <a id="bookmarklet" href="#">Html2Rss</a>
+      Drag this link to your bookmarks and click it on any page:
+      <a id="bookmarklet" class="auto_source__bookmarklet" href="#">Html2Rss</a>
     </p>
   </article>
 </aside>
