--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -1,9 +1,9 @@
 ---
 export interface Props {
-  title?: string
+  title?: string;
 }
 
-const { title = "html2rss-web" } = Astro.props
+const { title = "html2rss-web" } = Astro.props;
 ---
 
 <!doctype html>
